# Origami_tools

./: .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: documentation.yaml
_sources/: index.rst.txt
api/: modules.html  origami_tools.Geometry.html  origami_tools.LaserParams.html  origami_tools.Origamis.html  origami_tools.Pattern.html  origami_tools.Utils.html  origami_tools.html
archive/: decoupe_laser.py  geometry.py
doc/: requirements.txt
doc/source/api/: modules.rst  origami_tools.rst
doc/sphinx/source/: conf.py  index.rst
doc/sphinx/source/api/: origami_tools.Origamis.rst
doc/sphinx/source/q00_quickstart/: q00_index.rst
doc/sphinx/source/quick_start/: index.rst
quick_start/: index.html
src/origami_tools/: __init__.py  _types.py  config.json  decoupe_laser.py  geometry.py  requirement.txt
src/origami_tools/Geometry/: __init__.py  line.py  plane.py  repere.py  shape.py  surface.py  vector.py  volume.py
src/origami_tools/LaserCut/: __init__.py  laser_cut.py
src/origami_tools/LaserParams/: __init__.py  laser_cut.py
src/origami_tools/LaserParams/material_profiles/: default.csv  default_visible.csv  origabot.csv  origabot_template.json  resirob.csv  resirob_template.json  test2_adhesif.csv  test4_adhesif.csv
src/origami_tools/Origamis/: __init__.py  kresling.py
src/origami_tools/Origamis/origami_saves/: saved_multi_towers.json  saved_towers.json  saved_towers.txt
src/origami_tools/Origamis/origami_saves/animations/: code_3tower_p20_rot_animation.py
src/origami_tools/Patron/: __init__.py  drawn_shapes.py  patron.py
src/origami_tools/Pattern/: __init__.py  drawn_shapes.py  pattern.py
src/origami_tools/Utils/: __init__.py  _svg_utils.py
src/origami_tools/material_profiles/: default.csv  test1_adhesif.csv  test3_adhesif.csv  test5_adhesif.csv
src/origami_tools/tests/: test1.py  test2.ipynb
src/origami_tools/utils/: __init__.py  _svg_utils.py
tests/: test1.py  test2.ipynb  test_Kresling_assemb_simu.py
