[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "origami_tools"
version = "0.0.5"
authors = [
    { name="Enssis", email="enssis@protonmail.com" },
]
description = "A package with different tools for origami creation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy >= 1.26",
    "svg.py >= 1.6",
    "Ipython >= 8.0",
    "cairosvg >= 2.5",
    "matplotlib >= 3.7",
    "numpy-stl >= 3.0",
    "prettytable >= 0.7",
    "svglib >= 0.9.3",
    "reportlab >= 3.6.12"
]

[project.urls]
Homepage = "https://github.com/Enssis/Origami_python_package"